fix overflow on search results page

--- a/css/search-results.css
+++ b/css/search-results.css
@@ -13,6 +13,7 @@ img {
 
 #search-results {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
 }
